adds dark vs light mode icon setting

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./lightGameboxdLogo.png" />
+
+    <link rel="shortcut icon" type="image/png" href="./lightGameboxdLogo.png" media="(prefers-color-scheme: dark)"/>
+    <link rel="shortcut icon" type="image/png" href="./gameboxdlogo.png" media="(prefers-color-scheme: light)"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gameboxd</title>
   </head>
