--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <link rel="shortcut icon" type="image/png" href="./lightGameboxdLogo.png" media="(prefers-color-scheme: dark)"/>
-    <link rel="shortcut icon" type="image/png" href="./gameboxdlogo.png" media="(prefers-color-scheme: light)"/>
+    <link rel="shortcut icon" type="image/png" href="./gameboxdLogo.png" media="(prefers-color-scheme: light)"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gameboxd</title>
