--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,10 @@
     <link rel="shortcut icon" type="image/png" href="./lightGameboxdLogo.png" media="(prefers-color-scheme: dark)"/>
     <link rel="shortcut icon" type="image/png" href="./gameboxdlogo.png" media="(prefers-color-scheme: light)"/>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gameboxd</title>
   </head>
