--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gameboxd</title>
   </head>
-  <body>
+  <body style="font-family: Source-Sans-Pro;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
